# pytextcaptcha

./: .drone.yml  README.md  pyproject.toml  setup.cfg
tests/: test_textcaptcha.py
textcaptcha/: __init__.py  captcha.py  captcha_fetcher.py
